# tired

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
completions/: _tired  tired.bash
include/: cli.h  graphics.h  input.h  output.h  registry.h  tired.h  util.h
protocol/: CMakeLists.txt
src/: cli.c  graphics.c  input.c  main.c  output.c  registry.c  util.c
